# confirmate

./: .addlicense-header.txt  .dockerignore  .gitignore  .gitmodules  AGENT.md  AGENTS.md  CONTRIBUTING.md  Dockerfile.collector  Dockerfile.core  Dockerfile.doc-analyser  Dockerfile.ui  README.md  README_AUTH_v1.md  add-license-headers.sh  codecov.yml  confirmate.code-workspace  copilot-instructions.md  demo.sh  docker-compose.yml  go.work  go.work.sum
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yml  go-generate-check.yml
collectors/: proto.go
collectors/cloud/: README.md  cloud.go  go.mod  go.sum
collectors/documents/: .gitignore  README.md  pyproject.toml  requirements.txt
collectors/documents/generated_test_pdfs/: manifest.json
collectors/documents/scripts/: generate_test_pdfs.py
collectors/documents/src/document_analyser/: __init__.py  cli.py  config.py  evidence_profiles.py  evidence_store.py  extractor.py  llm.py  loaders.py  pipeline.py  prompts.py  proto_schema.py  requirements.py
core/: .gitignore  .golangci.yml  buf.gen.ontology.yaml  buf.gen.yaml  buf.gotag.gen.yaml  buf.openapi.gen.yaml  buf.yaml  ddl.go  go.mod  go.sum  proto.go  query.sql  schema.sql  sqlc.yaml  tools.go  update_openapi_version.sh
core/api/: auth.go  (+8 more)
deploy/: ui-nginx.conf  ui-node-server.mjs  ui-server.mjs
example-data/: cra-example-catalog.json  metrics-cra.json  test_evidence.json
importers/: bsi_c3a.py
ui/: .gitignore  Dockerfile  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
util/: go.mod  go.sum
(+585 files in other folders)
